--- a/pom.xml
+++ b/pom.xml
@@ -91,16 +91,16 @@
   <build>
   	<plugins>
 
-   
+       <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.1</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+          </plugin>      
       
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.11.0</version>
-          <configuration>
-            <!-- put your configurations here -->
-          </configuration>
-        </plugin>
       
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
